# MicroMonolithServer

./: .gitmodules  CMakeLists.txt  netmem.sh  readme.md  setup.sh  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  application.cpp
app/conf/: config.json
app/conf/www/: index.html
cache/: CMakeLists.txt
cache/include/mms/cache/: memorykeyvalue.h
cache/memorykeyvalue/: CMakeLists.txt
core/: CMakeLists.txt
core/include/mms/: listener.h
core/include/mms/base/: error.h  guid.h  maths.h  stream.h  types.h
core/include/mms/cmd/: configparser.h  typecast.h
core/include/mms/ds/: prefixmap.h
core/include/mms/event/: listener.h  listner.h
core/include/mms/lockfree/: fixedqueue.h
core/include/mms/log/: log.h  logentry.h  varadic.h
core/include/mms/net/: base.h  ipv6addr.h  quic.h  socket.h  sslcommon.h  tcpcommon.h  tcpserver.h  tcpserverevent.h  tcpsslserver.h  udpserversimple.h
core/include/mms/server/: echo.h  http.h
core/include/rohit/base/: error.h  guid.h  maths.h  types.h
core/include/rohit/cmd/: configparser.h  typecast.h
core/include/rohit/event/: listner.h
core/include/rohit/lockfree/: fixedqueue.h
core/include/rohit/log/: log.h  logentry.h  varadic.h
core/include/rohit/net/: ipv6addr.h  socket.h  tcpserverevent.h
core/lib/: CMakeLists.txt  config.h  configparser.cpp  log.cpp
core/src/: config.h  configparser.cpp  coretest.cpp  error.cpp  listener.cpp  listner.cpp  log.cpp  netbase.cpp  sslcommon.cpp  tcpserver.cpp  tcpserverevent.cpp  tcpsslserver.cpp  udpserversimple.cpp
core/test/: coretest.cpp  quictest.cpp  streamtest.cpp
countrycode/: CMakeLists.txt  countrycode.cpp
docs/: cache.md  call.md
mmsclient/: CMakeLists.txt  mmsclient.cpp
server/: CMakeLists.txt
server/include/mms/server/: http.h  httpfilehandler.h
server/src/: filehandler.cpp  http.cpp
test/: CMakeLists.txt
test/echoserver/: CMakeLists.txt  config.h  echoclient.cpp  echoserver.cpp  echosslclient.cpp  echosslserver.cpp  echoudpclient.cpp
test/httpserver/: CMakeLists.txt  httpserver.cpp  httpsslserver.cpp
test/httpserver/www/: index.html
test/httpserver/www1/: index.html
test/logreader/: CMakeLists.txt  logreader.cpp
tools/: CMakeLists.txt
tools/logreader/: CMakeLists.txt  logreader.cpp
